<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradation"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/age_editor"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="@string/unnecessary"
        android:textAlignment="center"
        android:textColor="#AAABAE"
        android:textColorHint="#AAABAE"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/age_text"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/age_text">


    </EditText>

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <EditText
        android:id="@+id/height_editor"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textColorHint="#2196F3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/height_text"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/height_text" />
        <requestFocus />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/weight_editor"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/weight_text"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/weight_text" />

    <CheckBox
        android:id="@+id/formula_changer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textAllCaps="false"
        android:textColor="#216EF3"
        android:textColorHighlight="#3F51B5"
        android:textColorLink="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box_style"
        android:text="@string/for_calculate"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/age_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_unit"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/age_editor"
        app:layout_constraintStart_toStartOf="@+id/weight_unit"
        app:layout_constraintTop_toTopOf="@+id/age_editor" />

    <TextView
        android:id="@+id/height_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_unit"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/height_editor"
        app:layout_constraintStart_toStartOf="@+id/weight_unit"
        app:layout_constraintTop_toTopOf="@+id/height_editor" />

    <TextView
        android:id="@+id/weight_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_unit"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/weight_editor"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/weight_editor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textColor="#216EF3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="102dp"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/oyako2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="85dp"
        android:layout_height="102dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/oyako" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="71dp"
        android:layout_height="69dp"
        android:rotation="47"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:srcCompat="@drawable/medical_capsule1_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>