<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradation"
    tools:context=".calculateActivity">

    <TextView
        android:id="@+id/adult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#00000000"
        android:fontFamily="@font/yuseimagic_regular"
        android:text="@string/adult"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <EditText
        android:id="@+id/adult_max"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:colorControlActivated="#00bfff"
        android:ems="10"
        android:hint="@string/max"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textColorHint="#AAABAE"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.3">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/range"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/adult_min"
        app:layout_constraintEnd_toStartOf="@+id/adult_min"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/adult_min" />

    <EditText
        android:id="@+id/adult_min"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:ems="10"
        android:hint="@string/min"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textColorHint="#AAABAE"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/kids_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box_style"
        android:backgroundTint="#00000000"
        android:text="@string/child"
        android:textColor="#216EF3"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_unit"
        android:textColor="#216EF3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/kids_max"
        app:layout_constraintStart_toEndOf="@+id/kids_max" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_unit"
        android:textColor="#216EF3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/adult_max"
        app:layout_constraintStart_toEndOf="@+id/adult_max" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_unit"
        android:textColor="#216EF3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/adult_min"
        app:layout_constraintEnd_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/kids_max"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/max"
        android:textColor="#2196F3"
        android:textColorHint="#AAABAE"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/kids_min"
        android:layout_width="104dp"
        android:layout_height="60dp"
        android:background="@drawable/box_style"
        android:backgroundTint="#ffffff"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/min"
        android:textColor="#2196F3"
        android:textColorHint="#AAABAE"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/range"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/kids_min"
        app:layout_constraintEnd_toStartOf="@+id/kids_min"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/kids_min" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_unit"
        android:textColor="#216EF3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/kids_min"
        app:layout_constraintEnd_toStartOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yuseimagic_regular"
        android:text="@string/calculate"
        android:textColor="#216EF3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="96dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:srcCompat="@drawable/female_adult" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="48dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:srcCompat="@drawable/kids" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="99dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:srcCompat="@drawable/medicines" />


</androidx.constraintlayout.widget.ConstraintLayout>